fix: Resolve UI glitch in modal – correct form overlay on footer by adjusting z-index

--- a/frontend/src/dsfr-fix.scss
+++ b/frontend/src/dsfr-fix.scss
@@ -75,6 +75,10 @@ span.fr-icon-checkbox-circle-line.ds-fr-tag-icon {
   margin-bottom: 0 ! important;
 }
 
+.fr-modal__footer {
+  z-index: 2;
+}
+
 .fr-footer__partners .fr-footer__logo {
   box-shadow: none !important;
 }
